# task-manager

./: .gitignore  LICENSE  package-lock.json  package.json
.claude/: settings.local.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen_icon.go  icon.icns
src-tauri/src/: lib.rs  main.rs
